...
@Composable
public fun OldgePullRefresh(
    refreshing: Boolean,
    onRefresh: () -> Unit,
    modifier: Modifier = Modifier,
    height: Dp = Dp.Unspecified,
    label: String = "Обновляю",
    content: @Composable () -> Unit,
): Unit =
    PullRefreshFrame(refreshing, onRefresh, modifier, label) { pulled ->
        Column(
            pulled
                .fillMaxWidth()
...
